--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<tittle>Welcome to Potionfy</title>
 </head>
 <body>
-	<h1>Welcome to Potionfy! Enjoy your stay!</h1>
+	<h1 style="color: red">Welcome to Potionfy! Enjoy your stay!</h1>
 </body>
 </html>
