--- a/index.html
+++ b/index.html
@@ -9,4 +9,12 @@
 <body>
 	<h1 style="color: red">Welcome to Potionfy! Enjoy your stay!</h1>
 </body>
+<form action="mailto:hermione@potionfy.com" method="post" enctype="text/plain">
+Name:<br>
+    <input type="text" name="name"><br>
+    E-mail:<br>
+    <input type="text" name="mail"><br>
+    <input type="submit" value="Send">
+    <input type="reset" value="Reset">
+</form>
 </html>
